fix: Replace finalizers with Cleaners again
Amend 1ec00f3312817e02f2fee276a7065a8497e95981